Follow up fixes to CASSANDRA-16633
* Don't run rat check if git fails or not available
* Check for presence of rat.txt before running eclipse-warnings task
  (to ensure that the report is always generated by CI runs)

Patch by Sam Tunnicliffe; reviewed by Mick Semb Wever for CASSANDRA-16633

--- a/build.xml
+++ b/build.xml
@@ -1920,8 +1920,7 @@
   	<delete dir="build/eclipse-classes" />
   </target>
 
-
-  <target name="eclipse-warnings" depends="build" description="Run eclipse compiler code analysis">        
+  <target name="eclipse-warnings" depends="build, _assert_rat_output" description="Run eclipse compiler code analysis">
         <property name="ecj.log.dir" value="${build.dir}/ecj" />
         <property name="ecj.warnings.file" value="${ecj.log.dir}/eclipse_compiler_checks.txt"/>
         <delete dir="${ecj.log.dir}" />
