--- a/build.xml
+++ b/build.xml
@@ -1144,7 +1144,7 @@
       </checksum>
     </target>
 
-  <target name="build-test" depends="build" description="Compile test classes">
+  <target name="build-test" depends="build" description="Compile test classes" unless="no-build-test">
     <javac
      debug="true"
      debuglevel="${debuglevel}"
