--- a/.build/.mvn/wrapper/maven-wrapper.properties
+++ b/.build/.mvn/wrapper/maven-wrapper.properties
@@ -1,2 +1,4 @@
+# Be aware that the Maven wrapper JAR below is cached once downloaded so switching branches will use this version
+# regardless of what other Maven wrapper resources are in usage. This JAR has to be same across all branches.
 distributionUrl=https://repo.maven.apache.org/maven2/org/apache/maven/apache-maven/3.8.1/apache-maven-3.8.1-bin.zip
 wrapperUrl=https://repo.maven.apache.org/maven2/io/takari/maven-wrapper/0.5.6/maven-wrapper-0.5.6.jar
